[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_tools"
version = "0.0.1"
authors = [
  { name="Benjamin Collins", email="ben.collins@veracitynuclear.com" },
  { name="Cole Gentry", email="cole.gentry@veracitynuclear.com" }
]
description = "A collection of Machine Learning tools for various Nuclear Reactor Applications"
readme = "README.md"
keywords = []
requires-python = ">=3.11"
license = {text = "TBD"}
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3.11',
    'Operating System :: POSIX :: Linux',
    'Natural Language :: English',
    'Topic :: Scientific/Engineering :: Physics',
]
dependencies = [
    'tensorflow',
    'keras',
    'numpy',
    'pandas',
    'h5py',
    'scikit-learn',
    'scipy',
    'lightgbm',
    'matplotlib',
    'seaborn',
    'shap',
    'pathos'
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pylint",
    "black",
]
test = [
    "pytest",
    "pylint",
]

[project.urls]
Homepage = "https://github.com/veracity-nuclear/ml_tools"
Issues = "https://github.com/veracity-nuclear/ml_tools/issues"

[tool.pylint.'messages control']
disable = [
    "chained-comparison",
    "broad-exception-raised",
    "broad-exception-caught",
    "dangerous-default-value",
    "duplicate-code",
    "eval-used",
    "fixme",
    "invalid-name",
    "missing-module-docstring",
    "missing-function-docstring",
    "pointless-string-statement",
    "redefined-outer-name",
    "too-few-public-methods",
    "too-many-lines",
    "too-many-locals",
    "too-many-branches",
    "too-many-ancestors",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-public-methods",
    "too-many-statements",
    "too-many-nested-blocks",
    "too-many-instance-attributes",
    "unspecified-encoding",
    "unused-variable"
]

[tool.pylint.'format']
max-line-length = 127

[tool.black]
line-length = 127
